Demo-App/kubernetes/backend_deployment_v2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    opflex.cisco.com/endpoint-group: '{"tenant":"clocpXX","app-profile":"aci-containers-clocpXX","name":"backend_v2"}'
  name: backend-deployment-2
  labels:
    app: backend-2
  namespace: web-1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend-2
  template:
    metadata:
      labels:
        app: backend-2
    spec:
      containers:
      - name: backend-2
        image: fwardzichowski/backend:v2
        ports:
        - containerPort: 5000
