Demo-App/kubernetes/backend_deployment_v3.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  labels:
    app: backend
  namespace: web-2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: fwardzichowski/backend:v1
        ports:
        - containerPort: 5000
