Demo-App/kubernetes/nettools_pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nettools
  namespace: web-1
spec:
  containers:
    - name: nettools
      image: travelping/nettools
      commands:
        - sleep
        - "3600"
