Demo-App/kubernetes/backend_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: web-1
spec:
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
