Demo-App/kubernetes/backend_service_v2.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service-2
  namespace: web-1
spec:
  selector:
    app: backend-2
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
