Demo-App/kubernetes/frontend_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: web-1
spec:
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: LoadBalancer
